--- a/common/nginx.conf
+++ b/common/nginx.conf
@@ -4,4 +4,7 @@ server {
         default_type text/plain;
         return 200 'Hello';
     }
+    location /healthz {
+        return 500;
+    }
 }
