--- a/k8s/task3.yaml
+++ b/k8s/task3.yaml
@@ -4,28 +4,47 @@ metadata:
   name: nginx-service
 spec:
   selector:
-    run: nginx-kube
+    app: nginx
   ports:
   - protocol: TCP
     port: 80
+    targetPort: 80
   type: LoadBalancer
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nginx-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: nginx-service
+            port:
+              number: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: task3-nginx-deployment
 spec:
-  replicas: 2
+  replicas: 10
   selector:
     matchLabels:
-      run: nginx-kube
+      app: nginx
   template:
     metadata:
       labels:
-        run: nginx-kube
+        app: nginx
     spec:
       containers:
       - name: nginx
-        image: nginx:1.7.9
+        image: nginx
         ports:
         - containerPort: 80
