--- a/k8s/task1-10.yaml
+++ b/k8s/task1-10.yaml
@@ -15,3 +15,20 @@ spec:
       containers:
       - name: nginx
         image: nginx
+        ports:
+        - containerPort: 80
+        resources:
+          requests:
+            cpu: "10m"
+            memory: "128Mi"
+          limits:
+            cpu: "20m"
+            memory: "256Mi"
+        volumeMounts:
+        - name: config-volume
+          mountPath: /etc/nginx/conf.d/custom.conf
+          subPath: custom.conf
+      volumes:
+      - name: config-volume
+        configMap:
+          name: nginx-config
