fix(k8s): Using incorrect file to setup nginx config

--- a/k8s/task1-1.yaml
+++ b/k8s/task1-1.yaml
@@ -27,7 +27,7 @@ spec:
         volumeMounts:
         - name: config-volume
           mountPath: /etc/nginx/conf.d/custom.conf
-          subPath: custom.conf
+          subPath: nginx.conf
       volumes:
       - name: config-volume
         configMap:
